[package]
name = "rcomb"
version = "0.1.5"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["combinatorics", "mathematics"]
categories = ["algorithms", "data-structures", "mathematics"]
repository = "https://github.com/fomichev-d/rcomb"
description = "Combinatorial objects, traits, collections"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rayon = { version = "1.11.0", optional = true }
petgraph = { version = "0.8.3", optional = true }
itertools = "0.14.0"
radix_trie = "0.3.0"
divisors = "0.2.1"
prime-factor = { version = "0.6.3", default-features = false }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "map"
harness = false
