[package]
name = "rcomb"
version = "0.2.5"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["combinatorics", "mathematics"]
categories = ["algorithms", "data-structures", "mathematics"]
repository = "https://github.com/fomichev-d/rcomb"
description = "Combinatorial objects, traits, collections"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
rayon = ["dep:rayon", "dep:uf_rush"]
geng = []

[dependencies]
rayon = { version = "1.11.0", optional = true }
petgraph = { version = "0.8.3", optional = true }
itertools = "0.14.0"
radix_trie = "0.3.0"
divisors = "0.2.1"
prime-factor = { version = "0.7.0", default-features = false }
csv = "1.4.0"
kdam = { version = "0.6.4", optional = true }
uf_rush = { version = "0.2.1", optional = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "geng"
required-features = ["petgraph", "geng"]
harness = false
